--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.5.0",
     "drizzle-orm": "^0.32.1",
     "embla-carousel-autoplay": "^8.1.7",
     "embla-carousel-react": "^8.6.0",
@@ -73,6 +72,7 @@
     "genkit-cli": "^1.20.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "dotenv": "^16.5.0"
   }
 }
