--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^11.3.17",
     "genkit": "^1.20.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "next-themes": "^0.3.0",
